# NLP-Simple-to-Spectacular

./: .gitignore  .nojekyll  CNAME  _quarto.yml  black.sh  conda_env_yml.py  env.yml  environment.yml  index.html  index.qmd  intro.html  intro.qmd  pyproject.toml  references.bib  references.html  search.json
01_data/: README.md  all_movie_ids.csv  combine_movie_id_files.py  data.html  data.ipynb  manual_movie_ids.csv  movie_data.py  movie_ids.csv  unknown_movie.py  unknown_movie_ids.csv
chapter/01_data/: data.html  data.ipynb
chapter/02_baseline/: baseline_classifier.html  baseline_classifier.ipynb
chapter/03_one_r/: one_r.html  one_r.ipynb
chapter/03_oner/: oner.html  oner.ipynb
chapter/04_boc/: boc.html  boc.ipynb
chapter/04_oner/: oner.html  oner.ipynb
chapter/05_decision_tree/: decision_tree.html  decision_tree.ipynb
chapter/06_loss/: loss.html  loss.ipynb
chapter/07_bow/: bow.html  bow.ipynb
chapter/08_tokens/: tokens.html  tokens.ipynb
chapter/09_unigram/: unigram.html  unigram.ipynb
chapter/10_ngram/: ngram.html  ngram.ipynb
chapter/11_hyperparameters/: hyperparameters.html  hyperparameters.ipynb
chapter/bonus/: cleaning_data.html  cleaning_data.ipynb  unknown_movie.py
docs/: index.html  intro.html  references.html  search.json
nlpbook/: __init__.py  _results.py  data_accessors.py  results.py
nlpbook/metrics/: __init__.py
nlpbook/models/: baseline.py  decision_tree.py  ngram.py  oner.py
nlpbook/preprocessing/: bag_of_chars.py  bag_of_words.py  categorical_encoder.py  tokenizer.py
nlpbook/sparse/: __init__.py  _coo.py  _nlp.py  (+3 more)
(+11 files in other folders)
